--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "pm2 start app.js",
+    "start": "sudo pm2 start app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
