--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ lerna-debug.log*
 .pnpm-debug.log*
 
 # config
-# config.json*
+config.json*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
