Fix : env 파일 버그 수정

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,7 +38,7 @@ jobs:
           echo MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} >> .env
           echo MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }} >> .env
           echo MYSQL_HOST=${{ secrets.MYSQL_HOST }} >> .env
-          echo JWT_SECRET=${{ secrets.JWT_SECRET_SECRET_KEY }} >> .env
+          echo JWT_SECRET=${{ secrets.JWT_SECRET_KEY }} >> .env
           cat .env
 
       - name: Configure AWS credentials
